--- a/css/bootstrapcdn.css
+++ b/css/bootstrapcdn.css
@@ -1,98 +1,34 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:400,900);
-@import url(http://fonts.googleapis.com/css?family=Righteous);
-
-body {
-padding-top: 0px; /* 60px to make the container go all the way to the bottom of the topbar */
-margin-bottom:0px;
-background:#111;
-padding:0px;
-margin:0px;
-font-family: 'Lato', 'Helvetica Neue', Arial, sans-serif;
-
-}
-
-.alert {margin-bottom:0px;}
-
-
-/* White Background Stage (no clipping portrait view)*/
-#main-wrap {background:#fff; padding-bottom:0px; padding-top:40px;}
-.main {max-width:1170px; margin:0px auto; background:#fff; padding:0px 15px 15px 15px;}
-
-
-/* Full Width Footer */
-#footer-wrap {border-top:2px solid #000; display: block; Width:100%; position: relative; bottom:0px;}
-.footer {max-width:1170px; margin:0px auto; padding:15px; color:#efefef;}
-.footer a {color:#3A87AD;}
-.footer a:hover {color:#05aaea; text-decoration:none;}
-.footer p {font-size:12px;}
-.disclaimer {font-size:9px; color:#555;}
-
-
-/* Fix Blue Hero Unit */
-.hero-unit {background:#00a9c8; margin:0px 0px 30px 0px; display: block; border-radius: 0px; border:2px solid #005ca1; border-right:none; border-left:none; text-align:center; color:#fff; text-shadow: 1px 1px 2px #004356;
- font-family: 'Lato-Black', 'Helvetica Neue', Arial, sans-serif;
-
-background: #00a9c8; /* Old browsers */
-background: -moz-linear-gradient(top, #00a9c8 33%, #4bcdf4 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(33%,#00a9c8), color-stop(100%,#4bcdf4)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #00a9c8 33%,#4bcdf4 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, #00a9c8 33%,#4bcdf4 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, #00a9c8 33%,#4bcdf4 100%); /* IE10+ */
-background: linear-gradient(top, #00a9c8 33%,#4bcdf4 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00a9c8', endColorstr='#4bcdf4',GradientType=0 ); /* IE6-9 */
-
- font-weight:bold !important;
-}
-.hero-unit h1 {text-shadow: 2px 2px 4px #004356; margin-bottom:7px; font-family: 'Lato-Black', 'Helvetica Neue', Arial, sans-serif; }
-.hero-unit a {color:#d9edf6; }
-
-
-/* Jumbo Button */
-.btn-jumbo {
-	font-size: 20px;
-	font-weight: bold;
-	padding: 14px 24px 18px 24px;
-	margin-right: 10px;
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-	border:1px solid #005ca1;
-	color:#111 !important;
-	margin-top:15px;
-
-}
-
-.btn-jumbo i {margin-top:6px;}
-
-
-/** Logo Sprites **/
-.logoArea {display: block; width:500px; min-height:69px; overflow: hidden;}
-#NetDNA, #MaxCDN, #CloudCache {display: block; Width:134px; height:55px; margin:7px 0px; float:left; background-image:url('../img/logos-ro.png');}
-#NetDNA {background-position:0px 0px; margin-right:49px;}
-#MaxCDN {background-position:-134px 0px; margin-right:49px;}
-#CloudCache {background-position:-268px 0px;}
-#NetDNA:hover {background-position:0px -55px;}
-#MaxCDN:hover {background-position:-134px -55px;}
-#CloudCache:hover {background-position:-268px -55px;}
-
-
-/* Misc */
-.smallerTxt {font-size:14px;}
-.whois {font-size: 14px; text-align: left; line-height:20px; padding:1px 0 5px 5px;}
-
-.label {font-size:12px; font-weight:normal !important; font-family: 'Helvetica Neue', Arial, sans-serif; padding:2px 10px; margin-bottom:4px; vertical-align:text-top; text-shadow:1px 0px 2px #000;}
-input {font-weight:bold;}
-.recommended {color:#1D7DAA !important;}
-
-.nav li a {font-weight:bold;}
-
-
-/* Branding*/
-.brand: {border-right:1px solid #ccc !important;}
-.brand {color:#fff !important; text-shadow:1px 1px 2px #000;}
-.bscdn {color:#d9edf6; font-weight:bold; font-family: 'Lato-Black', 'Helvetica Neue', Arial, sans-serif; font-size:18px;}
-.pwr {font-size:12px !important; color:#888; font-style:italic;  font-family: 'Helvetica Neue', Arial, sans-serif;}
-.netdnabrnd {color:#efefef;}
-
-
-
+@import url(http://fonts.googleapis.com/css?family=Lato:400,900);@import url(http://fonts.googleapis.com/css?family=Righteous);body{padding-top:0px;margin-bottom:0px;background:#111;padding:0px;margin:0px;font-family:'Lato', 'Helvetica Neue', Arial, sans-serif;}
+.alert{margin-bottom:0px;}
+#main-wrap{background:#fff;padding-bottom:0px;padding-top:40px;}
+.main{max-width:1170px;margin:0px auto;background:#fff;padding:0px 15px 15px 15px;}
+#footer-wrap{border-top:2px solid #000;display:block;Width:100%;position:relative;bottom:0px;}
+.footer{max-width:1170px;margin:0px auto;padding:15px;color:#efefef;}
+.footer a{color:#3A87AD;}
+.footer a:hover{color:#05aaea;text-decoration:none;}
+.footer p{font-size:12px;}
+.disclaimer{font-size:9px;color:#555;}
+.hero-unit{background:#00a9c8;margin:0px 0px 30px 0px;display:block;border-radius:0px;border:2px solid #005ca1;border-right:none;border-left:none;text-align:center;color:#fff;text-shadow:1px 1px 2px #004356;font-family:'Lato-Black', 'Helvetica Neue', Arial, sans-serif;background:#00a9c8;background:-moz-linear-gradient(top, #00a9c8 33%, #4bcdf4 100%);background:-webkit-gradient(linear, left top, left bottom, color-stop(33%,#00a9c8), color-stop(100%,#4bcdf4));background:-webkit-linear-gradient(top, #00a9c8 33%,#4bcdf4 100%);background:-o-linear-gradient(top, #00a9c8 33%,#4bcdf4 100%);background:-ms-linear-gradient(top, #00a9c8 33%,#4bcdf4 100%);background:linear-gradient(top, #00a9c8 33%,#4bcdf4 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#00a9c8', endColorstr='#4bcdf4',GradientType=0);font-weight:bold !important;}
+.hero-unit h1{text-shadow:2px 2px 4px #004356;margin-bottom:7px;font-family:'Lato-Black', 'Helvetica Neue', Arial, sans-serif;}
+.hero-unit a{color:#d9edf6;}
+.btn-jumbo{font-size:20px;font-weight:bold;padding:14px 24px 18px 24px;margin-right:10px;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;border:1px solid #005ca1;color:#111 !important;margin-top:15px;}
+.btn-jumbo i{margin-top:6px;}
+.logoArea{display:block;width:500px;min-height:69px;overflow:hidden;}
+#NetDNA, #MaxCDN, #CloudCache{display:block;Width:134px;height:55px;margin:7px 0px;float:left;background-image:url('../img/logos.png');}
+#NetDNA{background-position:0px 0px;margin-right:49px;}
+#MaxCDN{background-position:-134px 0px;margin-right:49px;}
+#CloudCache{background-position:-268px 0px;}
+#NetDNA:hover{background-position:0px -55px;}
+#MaxCDN:hover{background-position:-134px -55px;}
+#CloudCache:hover{background-position:-268px -55px;}
+.smallerTxt{font-size:14px;}
+.whois{font-size:14px;text-align:left;line-height:20px;padding:1px 0 5px 5px;}
+.label{font-size:12px;font-weight:normal !important;font-family:'Helvetica Neue', Arial, sans-serif;padding:2px 10px;margin-bottom:4px;vertical-align:text-top;text-shadow:1px 0px 2px #000;}
+input{font-weight:bold;}
+.recommended{color:#1D7DAA !important;}
+.nav li a{font-weight:bold;}
+.brand:{border-right:1px solid #ccc !important;}
+.brand{color:#fff !important;text-shadow:1px 1px 2px #000;}
+.bscdn{color:#d9edf6;font-weight:bold;font-family:'Lato-Black', 'Helvetica Neue', Arial, sans-serif;font-size:18px;}
+.pwr{font-size:12px !important;color:#888;font-style:italic;font-family:'Helvetica Neue', Arial, sans-serif;}
+.netdnabrnd{color:#efefef;}
